Made links more readable

--- a/website/index.html
+++ b/website/index.html
@@ -157,10 +157,10 @@
                         <strong>Email:</strong><span class="ml-15"><a href="mailto:info@thecoverducks.co.uk">info@thecoverducks.co.uk</a></span>
                     </div>
                     <div class="mb-15">
-                        <strong>Facebook:</strong><span class="ml-15"><a href="https://www.facebook.com/TheCoverDucks">https://www.facebook.com/TheCoverDucks</a></span>
+                        <strong>Facebook:</strong><span class="ml-15"><a href="https://www.facebook.com/TheCoverDucks">www.facebook.com/TheCoverDucks</a></span>
                     </div>
                     <div class="mb-100">
-                        <strong>Instagram:</strong><span class="ml-15"><a href="https://www.instagram.com/thecoverducks/">https://www.instagram.com/thecoverducks/</a></span>
+                        <strong>Instagram:</strong><span class="ml-15"><a href="https://www.instagram.com/thecoverducks/">www.instagram.com/thecoverducks/</a></span>
                     </div>
                 </div>
             </div>
