--- a/website/index.html
+++ b/website/index.html
@@ -160,7 +160,7 @@
                         <strong>Facebook:</strong><span class="ml-15"><a href="https://www.facebook.com/TheCoverDucks">www.facebook.com/TheCoverDucks</a></span>
                     </div>
                     <div class="mb-100">
-                        <strong>Instagram:</strong><span class="ml-15"><a href="https://www.instagram.com/thecoverducks">www.instagram.com/thecoverducks/</a></span>
+                        <strong>Instagram:</strong><span class="ml-15"><a href="https://www.instagram.com/thecoverducks">www.instagram.com/thecoverducks</a></span>
                     </div>
                 </div>
             </div>
