--- a/website/index.html
+++ b/website/index.html
@@ -86,6 +86,7 @@
                         <div class="col-12">
                             <div class="hero-slides-content text-center">
                                 <h2 data-animation="fadeInUp" data-delay="300ms">the cover ducks <span>the cover ducks</span></h2>
+                                <h6 data-animation="fadeInUp" data-delay="300ms">midlands function band</h6>
                                 <a data-animation="fadeInUp" data-delay="500ms" href="#discover" class="btn oneMusic-btn mt-50">Discover <i class="fa fa-angle-double-right"></i></a>
                             </div>
                         </div>
@@ -103,6 +104,7 @@
                         <div class="col-12">
                             <div class="hero-slides-content text-center">
                                 <h2 data-animation="fadeInUp" data-delay="300ms">the cover ducks <span>the cover ducks</span></h2>
+                                <h6 data-animation="fadeInUp" data-delay="300ms">midlands function band</h6>
                                 <a data-animation="fadeInUp" data-delay="500ms" href="#discover" class="btn oneMusic-btn mt-50">Discover <i class="fa fa-angle-double-right"></i></a>
                             </div>
                         </div>
