--- a/website/index.html
+++ b/website/index.html
@@ -153,7 +153,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row mb-100">
                 <div class="col-12 col-lg-9">
                     <div class="mb-15">
                         <strong>Email:</strong><span class="ml-15"><a href="mailto:info@thecoverducks.co.uk">info@thecoverducks.co.uk</a></span>
@@ -169,6 +169,8 @@
         </div>
     </section>
     <!-- ##### Contact Area End ##### -->
+
+    <hr class="mt-100 mb-100"/>
 
     <!-- ##### All Javascript Script ##### -->
     <!-- jQuery-2.2.4 js -->
