Updated with show reel video

--- a/website/index.html
+++ b/website/index.html
@@ -60,7 +60,8 @@
                                     <li><a href="#top">Home</a></li>
                                     <li><a href="#discover">Discover</a></li>
                                     <li><a href="https://www.facebook.com/TheCoverDucks">Facebook</a></li>
-                                    <li><a href="https://www.instagram.com/thecoverducks/">Instagram</a></li>
+                                    <li><a href="https://www.instagram.com/thecoverducks">Instagram</a></li>
+                                    <li><a href="https://www.youtube.com/@TheCoverDucks">YouTube</a></li>
                                     <li><a href="#contact">Contact</a></li>
                                 </ul>
                             </div>
@@ -128,14 +129,19 @@
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-9">
                     <div class="text-center mb-70">
-                        <p>Nam tristique ex vel magna tincidunt, ut porta nisl finibus. Vivamus eu dolor eu quam varius rutrum. Fusce nec justo id sem aliquam fringilla nec non lacus. Suspendisse eget lobortis nisi, ac cursus odio. Vivamus nibh velit, rutrum at ipsum ac, dignissim iaculis ante. Donec in velit non elit pulvinar pellentesque et non eros.</p>
+                        <p>Introducing The Cover Ducks, a dynamic force in the world of rock covers that promises an electrifying experience for every music enthusiast. Prepare yourself for a sonic adventure like no other as this band takes the stage, delivering a performance that seamlessly blends skill, energy, and an infectious love for the music.</p>
+                        <p>Imagine a stage bathed in vibrant lights, and onto it strides The Cover Ducks, exuding an undeniable confidence. From the first notes, you'll be hooked into a journey through their unique interpretations of classic and contemporary hits, each one meticulously crafted to showcase their exceptional talent.</p>
+                        <p>The Cover Ducks don't just play covers; they breathe new life into each song, infusing it with their distinctive sound. Guitars scream with intensity, drums pulse with rhythm, and the vocals, led by a charismatic frontperson, soar to heights that resonate with the essence of rock 'n' roll rebellion.</p>
+                        <p>The band's synergy is palpable, creating an atmosphere that captivates audiences and transforms each performance into an immersive celebration. The Cover Ducks have mastered the art of making every show an unforgettable experience, leaving concert-goers craving more of their infectious energy.</p>
+                        <p>Step into the world of The Cover Ducks, where every performance is a testament to their passion for music and a commitment to delivering a rock spectacle that transcends the ordinary. Get ready to be swept away by the irresistible allure of The Cover Ducks as they redefine the boundaries of the rock cover scene, promising a night that's not just a concert but a thrilling sonic journey.</p>
+
                     </div>
                 </div>
             </div>
 
             <div class="row">
                 <div class="youtube-video-container">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/p2EDkv_dyeI?si=weKw4wHBYg4yxttA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Cb4U5JV0si4?si=x-a4KLIGPB1WZ95X" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
@@ -161,8 +167,11 @@
                     <div class="mb-15">
                         <strong>Facebook:</strong><span class="ml-15"><a href="https://www.facebook.com/TheCoverDucks">www.facebook.com/TheCoverDucks</a></span>
                     </div>
-                    <div class="mb-100">
+                    <div class="mb-15">
                         <strong>Instagram:</strong><span class="ml-15"><a href="https://www.instagram.com/thecoverducks">www.instagram.com/thecoverducks</a></span>
+                    </div>
+                    <div class="mb-100">
+                        <strong>Instagram:</strong><span class="ml-15"><a href="https://www.youtube.com/@TheCoverDuck">https://www.youtube.com/@TheCoverDuck</a></span>
                     </div>
                 </div>
             </div>
