--- a/website/index.html
+++ b/website/index.html
@@ -171,7 +171,7 @@
                         <strong>Instagram:</strong><span class="ml-15"><a href="https://www.instagram.com/thecoverducks">www.instagram.com/thecoverducks</a></span>
                     </div>
                     <div class="mb-100">
-                        <strong>Instagram:</strong><span class="ml-15"><a href="https://www.youtube.com/@TheCoverDuck">https://www.youtube.com/@TheCoverDuck</a></span>
+                        <strong>YouTube:</strong><span class="ml-15"><a href="https://www.youtube.com/@TheCoverDuck">https://www.youtube.com/@TheCoverDuck</a></span>
                     </div>
                 </div>
             </div>
