--- a/website/index.html
+++ b/website/index.html
@@ -59,6 +59,7 @@
                                 <ul>
                                     <li><a href="#top">Home</a></li>
                                     <li><a href="#discover">Discover</a></li>
+                                    <li><a href="#setlist">Setlist</a></li>
                                     <li><a href="https://www.facebook.com/TheCoverDucks">Facebook</a></li>
                                     <li><a href="https://www.instagram.com/thecoverducks">Instagram</a></li>
                                     <li><a href="https://www.youtube.com/@TheCoverDucks">YouTube</a></li>
