--- a/website/index.html
+++ b/website/index.html
@@ -64,7 +64,9 @@
                                 <ul>
                                     <li><a href="#top">Home</a></li>
                                     <li><a href="#about">About</a></li>
+                                    <li><a href="#video">Video</a></li>
                                     <li><a href="#setlist">Setlist</a></li>
+                                    <li><a href="#photos">Photos</a></li>
                                     <li><a href="https://www.facebook.com/TheCoverDucks">Facebook</a></li>
                                     <li><a href="https://www.instagram.com/thecoverducks">Instagram</a></li>
                                     <li><a href="https://www.youtube.com/@TheCoverDucks">YouTube</a></li>
@@ -138,6 +140,42 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Single Hero Slide -->
+            <div class="single-hero-slide d-flex align-items-center justify-content-center">
+                <div class="slide-img bg-img" style="background-image: url(img/slideshow/drummonds_mark.jpg);"></div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="hero-slides-content text-center">
+                                <div data-animation="fadeInUp" data-delay="300ms">
+                                    <img class="small-logo-centred" src="img/logo/logo-small.png" alt="The Cover Ducks logo">
+                                </div>
+                                <h6 data-animation="fadeInUp" data-delay="300ms">female fronted midlands covers band</h6>
+                                <a data-animation="fadeInUp" data-delay="500ms" href="#video" class="btn oneMusic-btn mt-50">Video <i class="fa fa-angle-double-right"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Single Hero Slide -->
+            <div class="single-hero-slide d-flex align-items-center justify-content-center">
+                <div class="slide-img bg-img" style="background-image: url(img/slideshow/kid_justin.jpg);"></div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="hero-slides-content text-center">
+                                <div data-animation="fadeInUp" data-delay="300ms">
+                                    <img class="small-logo-centred" src="img/logo/logo-small.png" alt="The Cover Ducks logo">
+                                </div>
+                                <h6 data-animation="fadeInUp" data-delay="300ms">female fronted midlands covers band</h6>
+                                <a data-animation="fadeInUp" data-delay="500ms" href="#photos" class="btn oneMusic-btn mt-50">Photos <i class="fa fa-angle-double-right"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <!-- ##### Hero Area End ##### -->
@@ -164,15 +202,28 @@
                     </div>
                 </div>
             </div>
-
-            <div class="row">
-                <div class="youtube-video-container">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Cb4U5JV0si4?si=x-a4KLIGPB1WZ95X" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                </div>
-            </div>
         </div>
     </section>
     <!-- ##### about End ##### -->
+
+        <!-- ##### about start ##### -->
+        <section id="video" class="watch section-padding-100">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="section-heading style-2">
+                            <h2>Video</h2>
+                        </div>
+                    </div>
+                </div> 
+                <div class="row">
+                    <div class="youtube-video-container">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/Cb4U5JV0si4?si=x-a4KLIGPB1WZ95X" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- ##### about End ##### -->
 
     <!-- ##### setlist start ##### -->
     <section id="setlist" class="section-padding-100">
@@ -223,7 +274,7 @@
                             <li>Play That Funky Music - Wild Cherry</li>
                             <li>All Right Now - Free</li>
 
-                            <li><strong>And many more!</strong></li>
+                            <li><h3>And many more!</h3></li>
                        </ul>
                     </div>
                 </div>
@@ -242,18 +293,43 @@
                     </div>
                 </div>
             </div>
-            <div class="row justify-content-center">
-                <div class="col-12 col-lg-9 pswp-gallery" id="my-gallery">
-                    <a href="./img/slideshow/kid_band.jpg"  data-pswp-width="204" data-pswp-height="136" target="_blank">
-                        <img src="./img/slideshow/kid_band.jpg" />
-                    </a>
-                    <a href="./img/slideshow/kid_grace_kirsty.jpg"  data-pswp-width="204" data-pswp-height="136" target="_blank">
-                        <img src="./img/slideshow/kid_grace_kirsty.jpg" />
-                    </a>
-                    <a href="./img/slideshow/kid_justin_grace.jpg"  data-pswp-width="204" data-pswp-height="136" target="_blank">
-                        <img src="./img/slideshow/kid_justin_grace.jpg" />
-                    </a>
-                </div>
+            <div class="col-12 pswp-gallery" id="my-gallery">
+                <a href="./img/slideshow/kid_band.jpg"  data-pswp-width="2048" data-pswp-height="1366" target="_blank">
+                    <img src="./img/slideshow_thumbs/kid_band.jpg" />
+                </a>
+                <a href="./img/slideshow/kid_grace_kirsty.jpg"  data-pswp-width="2048" data-pswp-height="1366" target="_blank">
+                    <img src="./img/slideshow_thumbs/kid_grace_kirsty.jpg" />
+                </a>
+                <a href="./img/slideshow/kid_grace.jpg"  data-pswp-width="1366" data-pswp-height="2048" target="_blank">
+                    <img src="./img/slideshow_thumbs/kid_grace.jpg" />
+                </a>
+                <a href="./img/slideshow/kid_justin_grace.jpg"  data-pswp-width="2048" data-pswp-height="1366" target="_blank">
+                    <img src="./img/slideshow_thumbs/kid_justin_grace.jpg" />
+                </a>
+                <a href="./img/slideshow/kid_justin.jpg"  data-pswp-width="1366" data-pswp-height="2048" target="_blank">
+                    <img src="./img/slideshow_thumbs/kid_justin.jpg" />
+                </a>
+                <a href="./img/slideshow/drummonds_grace.jpg"  data-pswp-width="960" data-pswp-height="686" target="_blank">
+                    <img src="./img/slideshow_thumbs/drummonds_grace.jpg" />
+                </a>
+                <a href="./img/slideshow/drummonds_grace_kirsty.jpg"  data-pswp-width="960" data-pswp-height="686" target="_blank">
+                    <img src="./img/slideshow_thumbs/drummonds_grace_kirsty.jpg" />
+                </a>
+                <a href="./img/slideshow/drummonds_mark.jpg"  data-pswp-width="960" data-pswp-height="686" target="_blank">
+                    <img src="./img/slideshow_thumbs/drummonds_mark.jpg" />
+                </a>
+                <a href="./img/slideshow/drummonds_kev.jpg"  data-pswp-width="960" data-pswp-height="686" target="_blank">
+                    <img src="./img/slideshow_thumbs/drummonds_kev.jpg" />
+                </a>
+                <a href="./img/slideshow/drummonds_justin.jpg"  data-pswp-width="960" data-pswp-height="686" target="_blank">
+                    <img src="./img/slideshow_thumbs/drummonds_justin.jpg" />
+                </a>
+                <a href="./img/slideshow/band1.jpg"  data-pswp-width="1066" data-pswp-height="811" target="_blank">
+                    <img src="./img/slideshow_thumbs/band1.jpg" />
+                </a>
+                <a href="./img/slideshow/band2.jpg"  data-pswp-width="1066" data-pswp-height="811" target="_blank">
+                    <img src="./img/slideshow_thumbs/band2.jpg" />
+                </a>
             </div>
         </div>
     </section>
