--- a/website/index.html
+++ b/website/index.html
@@ -192,13 +192,10 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-9">
-                    <div class="text-center mb-70">
-                        <p>Introducing The Cover Ducks, a dynamic force in the world of rock covers that promises an electrifying experience for every music enthusiast. Prepare yourself for a sonic adventure like no other as this band takes the stage, delivering a performance that seamlessly blends skill, energy, and an infectious love for the music.</p>
-                        <p>Imagine a stage bathed in vibrant lights, and onto it strides The Cover Ducks, exuding an undeniable confidence. From the first notes, you'll be hooked into a journey through their unique interpretations of classic and contemporary hits, each one meticulously crafted to showcase their exceptional talent.</p>
-                        <p>The Cover Ducks don't just play covers; they breathe new life into each song, infusing it with their distinctive sound. Guitars scream with intensity, drums pulse with rhythm, and the vocals, led by a charismatic frontperson, soar to heights that resonate with the essence of rock 'n' roll rebellion.</p>
-                        <p>The band's synergy is palpable, creating an atmosphere that captivates audiences and transforms each performance into an immersive celebration. The Cover Ducks have mastered the art of making every show an unforgettable experience, leaving concert-goers craving more of their infectious energy.</p>
-                        <p>Step into the world of The Cover Ducks, where every performance is a testament to their passion for music and a commitment to delivering a rock spectacle that transcends the ordinary. Get ready to be swept away by the irresistible allure of The Cover Ducks as they redefine the boundaries of the rock cover scene, promising a night that's not just a concert but a thrilling sonic journey.</p>
-
+                    <div class="mb-70">
+                        <p>The Cover Ducks are a dynamic pop and rock cover band that brings a vibrant mix of hits from the 60s to the present day. With two powerhouse female vocalists leading a six-piece ensemble, they deliver rich harmonies and an electrifying live performances.</p>
+                        <p>Based in the West Midlands, The Cover Ducks are the perfect choice for functions, weddings, clubs, and pubs. They provide a complete entertainment package with top-notch sound and lighting to make any event unforgettable.</p>
+                        <p>Whether you're looking to dance to timeless classics or modern chart-toppers, The Cover Ducks have you covered.</p>
                     </div>
                 </div>
             </div>
