Made logo clearer and smaller

--- a/website/index.html
+++ b/website/index.html
@@ -95,7 +95,7 @@
                         <div class="col-12">
                             <div class="hero-slides-content text-center">
                                 <div data-animation="fadeInUp" data-delay="300ms">
-                                    <img class="small-logo-centred" src="img/logo/logo-small.png" alt="The Cover Ducks logo">
+                                    <img class="small-logo-centred" src="img/logo/logo.png" alt="The Cover Ducks logo">
                                 </div>
                                 <h6 data-animation="fadeInUp" data-delay="300ms">female fronted midlands covers band</h6>
                                 <a data-animation="fadeInUp" data-delay="500ms" href="#about" class="btn oneMusic-btn mt-50">About <i class="fa fa-angle-double-right"></i></a>
